@@ -1,8 +1,6 @@
 package co.edu.udistrital.mdp.pets.controllers;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -31,10 +29,7 @@ public class AdoptionController {
     @GetMapping
     public ResponseEntity<List<AdoptionDTO>> getAll() {
         List<AdoptionEntity> entities = adoptionService.searchAdoptions();
-        List<AdoptionDTO> dtos = entities.stream()
-                .map(AdoptionDTO::new)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(entities.stream().map(AdoptionDTO::new).toList());
     }
 
     @GetMapping("/{id}")
