@@ -1,7 +1,6 @@
 package co.edu.udistrital.mdp.pets.controllers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -30,7 +29,7 @@ public class ShelterEventController {
         List<ShelterEventEntity> entities = shelterEventService.searchAllShelterEvents();
         List<ShelterEventDTO> dtos = entities.stream()
                 .map(ShelterEventDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
